unpackaged/main/default/objects/Product_Feedback_Req__c/Product_Feedback_Req__c.object-meta.xml
<CustomObject>
    <label>Product Feedback Request</label>
    <nameField>
        <label>Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Feedback Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>