unpackaged/main/default/objects/Product_Feedback_Req__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Product Feedback Requests</relationshipLabel>
    <relationshipName>Product_Feedback_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>