unpackaged/main/default/objects/Product_Feedback_Req__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Design</fullName>
            </value>
            <value>
                <fullName>Mobile</fullName>
            </value>
            <value>
                <fullName>Bugs</fullName>
            </value>
            <value>
                <fullName>Onboarding &amp; Discovery</fullName>
            </value>
            <value>
                <fullName>Dev Toolchain</fullName>
            </value>
            <value>
                <fullName>Grid</fullName>
            </value>
            <value>
                <fullName>Security</fullName>
            </value>
            <value>
                <fullName>Unknown/needs triage</fullName>
            </value>
            <value>
                <fullName>Docs</fullName>
            </value>
            <value>
                <fullName>App Building</fullName>
            </value>
            <value>
                <fullName>Infra</fullName>
            </value>
            <value>
                <fullName>Org Admin</fullName>
            </value>
            <value>
                <fullName>Workflows</fullName>
            </value>
            <value>
                <fullName>Resources (APIs, DBs, connectors)</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Services</fullName>
            </value>
            <value>
                <fullName>Documentation</fullName>
            </value>
            <value>
                <fullName>Application Building</fullName>
            </value>
            <value>
                <fullName>APIs in Retool</fullName>
            </value>
            <value>
                <fullName>Resources (APIs, DBs, etc.)</fullName>
            </value>
            <value>
                <fullName>Managed DBs</fullName>
            </value>
            <value>
                <fullName>Deployment</fullName>
            </value>
            <value>
                <fullName>Permissions</fullName>
            </value>
            <value>
                <fullName>Authentication</fullName>
            </value>
            <value>
                <fullName>Flows/BPM</fullName>
            </value>
            <value>
                <fullName>Cron Jobs</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Resource Auth</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>