unpackaged/main/default/objects/Product_Feedback_Req__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <inlineHelpText>Describe the request in detail, including the impact to the prospect/customer and any context that would be helpful for the team to use when prioritizing.</inlineHelpText>
    <label>Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>