unpackaged/main/default/objects/Product_Feedback_Req__c/fields/Environment__c.field-meta.xml
<CustomField>
    <fullName>Environment__c</fullName>
    <inlineHelpText>The Retool environment to which the request applies.</inlineHelpText>
    <label>Environment</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cloud</fullName>
            </value>
            <value>
                <fullName>On Prem</fullName>
            </value>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>Managed On Prem</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>