unpackaged/main/default/objects/Product_Feedback_Req__c/fields/Help__c.field-meta.xml
<CustomField>
    <fullName>Help__c</fullName>
    <formula>IMAGE(&quot;/servlet/servlet.FileDownload?file=0155A00000Aagpd&quot;,&quot;Help image&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Help</label>
    <type>Text</type>
</CustomField>