unpackaged/main/default/objects/Product_Feedback_Req__c/fields/Is_workaround_available__c.field-meta.xml
<CustomField>
    <fullName>Is_workaround_available__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check if a reasonable workaround exists to address the request while we prioritize it.</inlineHelpText>
    <label>Is workaround available?</label>
    <type>Checkbox</type>
</CustomField>