unpackaged/main/default/objects/Product_Feedback_Req__c/fields/Linear_Task__c.field-meta.xml
<CustomField>
    <fullName>Linear_Task__c</fullName>
    <label>Linear Task</label>
    <type>Url</type>
</CustomField>