unpackaged/main/default/objects/Product_Feedback_Req__c/fields/Severity__c.field-meta.xml
<CustomField>
    <fullName>Severity__c</fullName>
    <inlineHelpText>The severity of the feature request from the perspective of the prospect/customer</inlineHelpText>
    <label>Severity</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>P0: Immediate action</fullName>
            </value>
            <value>
                <fullName>P1: Action within 1 mo</fullName>
            </value>
            <value>
                <fullName>P2: Action within 3 mo</fullName>
            </value>
            <value>
                <fullName>P3: Action within 6 mo</fullName>
            </value>
            <value>
                <fullName>P4: Backlog</fullName>
            </value>
            <value>
                <fullName>0 - Deal blocker/churn risk</fullName>
            </value>
            <value>
                <fullName>1 - Nice to have</fullName>
            </value>
            <value>
                <fullName>2 - Idea/future concept</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>