unpackaged/main/default/objects/Product_Feedback_Req__c/validationRules/Only_relate_to_open_opps.validationRule-meta.xml
<ValidationRule>
    <fullName>Only_relate_to_open_opps</fullName>
    <active>false</active>
    <errorConditionFormula>ISNEW() &amp;&amp; 
Opportunity__r.IsClosed = TRUE &amp;&amp;
NOT(ISBLANK(Opportunity__c))</errorConditionFormula>
    <errorMessage>You cannot create a product feedback request related to a closed opportunity.</errorMessage>
</ValidationRule>